--- a/language_service/makefile
+++ b/language_service/makefile
@@ -5,4 +5,8 @@ docker-build:
 	docker build -t halfpipe:latest .
 
 docker-run:
-	docker run -p 8000:8000 halfpipe:latest
+	docker run -d -p 8000:8000 -e VERSION=1.0 halfpipe:latest
+
+docker-stop:
+	docker stop $$(docker ps -aq) && \
+	docker rm $$(docker ps -aq)
