--- a/language_service/makefile
+++ b/language_service/makefile
@@ -1,12 +1,12 @@
 run:
 	uvicorn main:app --reload
 
-docker-build:
+d-build:
 	docker build -t halfpipe:latest .
 
-docker-run: docker-stop docker-build
+d-run: d-stop d-build
 	docker run -d -p 8000:8000 -e VERSION=1.0 -e ENVIRON=local halfpipe:latest
 
-docker-stop:
+d-stop:
 	docker stop $$(docker ps -aq) || true && \
 	docker rm $$(docker ps -aq) || true
