--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - id: Deployment Action
+      - id: deployment-action
         run: |
           echo "Deploying to ${{ inputs.ip_address }}"
           echo "Deploying on environment ${{ inputs.envName }}"
